create new account form #1 - Resolved
I have set up conditions for creating a new user (username and password).

--- a/main.css
+++ b/main.css
@@ -41,6 +41,13 @@ footer {
     color: red;
 }
 
+#errorBox {
+    color: red;
+    text-align: center;
+    margin-top: 10px;
+    padding: 10px;
+}
+
 
 
 
