--- a/main.css
+++ b/main.css
@@ -13,6 +13,10 @@ header {
     justify-content: space-around;
 }
 
+h2 {
+    margin-bottom: 30px;
+}
+
 footer {
     height: 100px;
     width: 100%;
@@ -43,7 +47,7 @@ q {
 }
 
 #contentDiv {
-    height: calc(100vh - 200px);
+    height: calc(100vh - 300px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -72,9 +76,52 @@ q {
     padding: 10px;
 }
 
+/* MOBILE */
+@media screen and (max-width: 600px) {
+
+    header {
+        flex-direction: column;
+        justify-content: center;
+        height: 250px;
+    }
+
+    #headerDiv {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #contentDiv {
+        height: auto;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-top: 20px;
+        margin-bottom: 100px;
+    }
 
 
+    q {
+        font-size: 1rem;
+        color: #EB5757;
+        padding: 10px;
+        font-weight: bold;
+    }
 
+    footer {
+        height: auto;
+    }
+
+    #footerContent {
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        text-align: center;
+    }
+}
 
 
 
