--- a/main.css
+++ b/main.css
@@ -2,6 +2,9 @@ body {
     background-color: #FAFAFA;
     font-family: monospace;
     font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -21,8 +24,7 @@ footer {
     height: 100px;
     width: 100%;
     background-color: #EB5757;
-    position: fixed;
-    bottom: 0;
+    margin-top: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,7 +101,7 @@ q {
         padding-left: 30px;
         padding-right: 30px;
         margin-top: 20px;
-        margin-bottom: 100px;
+        margin-bottom: 20px;
     }
 
 
