--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ header {
 }
 
 h2 {
+    margin-top: 20px;
     margin-bottom: 30px;
 }
 
@@ -24,7 +25,7 @@ footer {
     height: 100px;
     width: 100%;
     background-color: #EB5757;
-    margin-top: auto;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,17 +44,22 @@ button:active {
 q {
     font-size: 1rem;
     color: #EB5757;
-    padding: 50px;
+    padding-top: 50px;
     font-weight: bold;
 
 }
 
 #contentDiv {
-    height: calc(100vh - 300px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
+
 }
 
 #headerDiv {
@@ -95,15 +101,6 @@ q {
         flex-direction: column;
         gap: 10px;
     }
-
-    #contentDiv {
-        height: auto;
-        padding-left: 30px;
-        padding-right: 30px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-
 
     q {
         font-size: 1rem;
